End of working day commit WIP
